--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light" style="scroll-padding-top: 5rem; scroll-behavior: smooth">
+<html
+  lang="en"
+  data-theme="light"
+  style="scroll-padding-top: 5rem; scroll-behavior: smooth"
+>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type=" " href=" " />
@@ -8,6 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
+
     <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
