--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type=" " href=" " />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App</title>
+    <title>Tidy</title>
   </head>
   <body>
     <div id="root"></div>
